hw05/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw05-service
spec:
  type: NodePort
  selector:
    app: hw05
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: web
