hw05/deployments/ingress-replace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw05-ingress-replace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /otusapp/nbelyakov(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hw05-service
                port:
                  number: 8000
