hw05/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw05-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hw05-service
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: hw05-service
                port:
                  number: 8000
